--- a/title.tex
+++ b/title.tex
@@ -88,7 +88,7 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \vspace{-20mm}
 {\let\clearpage\relax\chapter*{Abstrakt}}
 \noindent 
-Při interakci elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako jsou záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury lze navrhnout navrhnout tak, aby se chovaly žá\-dou\-cím způsobem, a označují se bu\`dto jako metamateriály nebo jako foto\-nic\-ké krys\-taly. Část z jejich navrhovaných využití je v~technice terahertzových vln, kde můžou překlenout po\-měr\-ně slabé možnosti kla\-sických součástek.  
+Při interakci elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako jsou záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury lze navrhnout tak, aby se chovaly žá\-dou\-cím způsobem, a označují se jako metamateriály nebo jako foto\-nic\-ké krys\-taly. Část z jejich navrhovaných využití je v~technice terahertzových vln, kde můžou překlenout po\-měr\-ně slabé možnosti kla\-sických součástek.  
 
 Teoretický základ práce vychází z elektrodynamiky prostředí s frek\-ven\-ční dis\-per\-zí, která je dále zobecněna na prostředí s prostorovou disperzí a na Blochovu-Floquetovu teorii vln v~periodických strukturách. Závěr teoretické části se pokouší vyjasnit pojmy používané v~literatuře a ukázat, že myšlenky metamateriálů i fotonických krystalů jsou ve skutečnosti starší, než se často uvádí.
 
