--- a/conclusion.tex
+++ b/conclusion.tex
@@ -112,3 +112,4 @@ The challenges which the metamaterial research faces nowadays may be overcome on
 It would be beneficial to avoid regarding metamaterials as mere means for putting into practice the notorious -- but so far, mostly elusive -- list of practical \textit{tasks} they seem to promise. Instead, in line with the quotation from the start of this section, it can be much more inspiring and useful to \textit{long for the endless immensity} of different phenomena that emerge from the wave interaction with periodic structures.
 %and for accurate theoretical description thereof. 
 
+\newpage
