--- a/pres/dominec-defence.beamer.tex
+++ b/pres/dominec-defence.beamer.tex
@@ -13,13 +13,19 @@
 %}}}
 \hypersetup{
         pdftitle={Metamaterials for the Terahertz Spectral Range},
-        pdfauthor={Ing. Filip Dominec},
+        pdfauthor={Filip Dominec},
         pdfsubject={},
         pdfkeywords={}
 }
 
-\title[short title]{full title}
-\author{name surname} \institute{} \date{}
+\title[THz MMs]{Metamaterias for the Terahertz Spectral Range\\ Ph. D. dissertation defence}
+\author{Filip Dominec} 
+\institute{Advisor: Mgr. Filip Kadlec, Dr. (Institute of Physics ASCR)\\ Consultant: Doc. Ing. Ivan Richter, Dr. (FNSPE CTU)} 
+\date{13$^{\mathrm{th}}$ December 2016}
+
+
+\input{defs.tex}
+
 
 \begin{document}
 \section{Introduction}
@@ -40,10 +46,6 @@ Light in PhCs   &$\leftrightarrow$  &$\lambda \sim a$ &$\leftrightarrow$ 	& Elec
 \end{exampleblock}
 
 
-\includegraphics[width=1.\framewidth]{../img/ERods_sketch_of_separate_spectra_to_continuous_scan.pdf}
-
-oetoeteuco uohsauo ecuhasoe uhaontehuas,c.uh sa,.huksa,nch ksa,hc ksa,hc kshca,.sk akjhc as,hkc sa,hk a
-k a ks,.k a,
 \end{frame} 		%}}}
 
 
@@ -72,7 +74,43 @@ We must carefully review the simple approaches to MMs that assumed the unit cell
 
 
 
+The structure under investigation
+Dielectric-rod photonic crystal (with ε=100)  [TODO - citations]
+Dielectric-rod metamaterial (with ε=100) [TODO - citations again]
+
+\includegraphics[width=1.\framewidth]{../img/ERods_sketch_of_separate_spectra_to_continuous_scan.pdf}
+
+
 \begin{frame}{}	%{{{
+\end{frame} 		%}}}
+
+\begin{frame}{}	%{{{
+PhC with r/a=0.1
+\end{frame} 		%}}}
+
+\begin{frame}{}	%{{{
+negative-index MM r/a=0.12
+
+\end{frame} 		%}}}
+
+\begin{frame}{}	%{{{
+Changing the radius-to-period parameter - continuous
+
+\end{frame} 		%}}}
+
+\begin{frame}{}	%{{{
+Changing the radius-to-period parameter - user plot [cite our paper]
+
+\end{frame} 		%}}}
+
+\begin{frame}{}	%{{{
+Do effective local $\eeff$ and $\meff$ make any sense? [TODO citations & screens from 'Antiresonance discussion']
+
+We arrived to a metamaterial where N makes physical sense, but we get no physical  when we transform N into effective $\eeff$ and $\eeff$.
+\end{frame} 		%}}}
+
+\begin{frame}{}	%{{{
+\includegraphics[width=1.\framewidth]{../img/ERods_sketch_of_separate_spectra_to_continuous_scan.pdf}
 \end{frame} 		%}}}
 
 
