--- a/pres/dominec-defence.beamer.tex
+++ b/pres/dominec-defence.beamer.tex
@@ -242,7 +242,7 @@ Landau and Lifshitz have shown that, with a clever choice of
 the magnetic behaviour of the medium can be fully and unambiguously described by the permittivity $\epsLL(\omega,\kk)$.
 \vfill
 
-For any transverse harmonic wave defined by its angular frequency $\omega$ and wavevector $\kk$, the metamaterial optical properties can be contained in one nonlocal parameter $\epsLL(\omega,\kk)$ (and all laws of electrodynamics are still apply):
+For any transverse harmonic wave defined by its angular frequency $\omega$ and wavevector $\kk$, the metamaterial optical properties can be contained in one nonlocal parameter $\epsLL(\omega,\kk)$ (and all laws of electrodynamics still apply):
 	\begin{exampleblock}
 		\;\vspace{-1em}
 	\begin{equation*}
